bk_ida/gccida/g1/find_equiv_reg
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_equiv_reg/src/reload.c:6783:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class a3, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_equiv_reg/src/reload.c:6787:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_equiv_reg/src/reload.c:6799:4: error: expected ';' after expression
rtx v19; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_equiv_reg/src/reload.c:6799:5: error: use of undeclared identifier 'v19'
rtx v19; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_equiv_reg/src/reload.c:6805:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_equiv_reg/src/reload.c:6805:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_equiv_reg/src/reload.c:6806:4: error: expected ';' after expression
rtx v26; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_equiv_reg/src/reload.c:6806:5: error: use of undeclared identifier 'v26'
rtx v26; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_equiv_reg/src/reload.c:6826:4: error: expected ';' after expression
rtx v46; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_equiv_reg/src/reload.c:6826:5: error: use of undeclared identifier 'v46'
rtx v46; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_equiv_reg/src/reload.c:6830:6: error: use of undeclared identifier 'v50'
rtx *v50; // rcx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_equiv_reg/src/reload.c:6843:4: error: expected ';' after expression
rtx v63; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_equiv_reg/src/reload.c:6843:5: error: use of undeclared identifier 'v63'
rtx v63; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_equiv_reg/src/reload.c:6882:4: error: expected ';' after expression
rtx value; // [rsp+28h] [rbp-70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_equiv_reg/src/reload.c:6882:5: error: use of undeclared identifier 'value'
rtx value; // [rsp+28h] [rbp-70h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_equiv_reg/src/reload.c:6883:4: error: expected ';' after expression
rtx tem; // [rsp+30h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_equiv_reg/src/reload.c:6883:5: error: use of undeclared identifier 'tem'; did you mean 'tee'?
rtx tem; // [rsp+30h] [rbp-68h] 
    ^~~
    tee
/usr/include/x86_64-linux-gnu/bits/fcntl-linux.h:416:18: note: 'tee' declared here
extern __ssize_t tee (int __fdin, int __fdout, size_t __len,
                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_equiv_reg/src/reload.c:6904:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( flag_float_store && mode_class_0[*( ( unsigned __int8 *)goal + 2)] == MODE_FLOAT ) 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_equiv_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_equiv_reg/src/reload.c:6927:14: error: expected ';' after return statement
return ( rtx)v12; 
             ^
             ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_equiv_reg/src/obj/reload.o] Error 1
